# StringEvolution

./: README.md  monkeytype.cabal  stack.yaml
src/: Main.hs
