name:                monkeytype
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Archaversine
author:              Archaversine
copyright:           2023 Archaversine
category:            Evolutionary Computation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable monkeytype
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O2
                       -prof
                       -fprof-auto
                       -rtsopts
